--- a/mac.yml
+++ b/mac.yml
@@ -18,26 +18,59 @@
     # Prep
     # --------------------------------------------------------------------------
 
-    - { role: macos, tags: ["macos","prep"] }
-    # - { role: danbohea.spelling, tags: ["spelling","prep"] }
+    - { role: ssh, tags: ["ssh","prep"] }
+    - { role: atom, tags: ["atom","prep"] }
+    - { role: quick_look_plugins, tags: ["quick_look_plugins","prep"] }
 
     # Stage 1: Essential day-to-day
     # --------------------------------------------------------------------------
 
-    # - { role: danbohea.flux, tags: ["flux","stage_1"] }
     - { cask_app_name: "the-unarchiver", tags: ["the_unarchiver","stage_1"], role: danbohea.cask-app }
-    # - { cask_app_name: "firefox", tags: ["firefox","stage_1"], role: danbohea.cask-app }
 
     # Stage 2: Essential dev
     # --------------------------------------------------------------------------
+
+    - { cask_app_name: "parallels-desktop", tags: ["parallels_desktop","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "virtualbox", tags: ["virtualbox","stage_2"], role: danbohea.cask-app }
+    - { role: vagrant, tags: ["vagrant","stage_2","sudo"] }
     - { role: git, tags: ["git","stage_2"] }
+    - { role: node_pkgs, tags: ["node_pkgs","stage_2"] }
+    - { brew_pkg_name: "python", tags: ["python","stage_2"], role: brew_pkg }
+    - { brew_pkg_name: "yarn", tags: ["yarn","stage_2"], role: brew_pkg }
+    - { role: tower, tags: ["tower","stage_2"] }
+    - { cask_app_name: "sequel-pro", tags: ["sequel_pro","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "docker", tags: ["docker","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "kitematic", tags: ["kitematic","stage_2"], role: danbohea.cask-app }
+
+    # Stage 3: Projects
+    # --------------------------------------------------------------------------
+
+    # TODO
+
+    # Stage 4: Remaining apps
+    # --------------------------------------------------------------------------
+
+    - { role: transmission, tags: ["transmission","stage_4"] }
+    - { cask_app_name: "opera", tags: ["opera","stage_4"], role: danbohea.cask-app }
+
+    # Stage 5: No-frills cask installed apps that CI can skip.
+    # This makes for faster tests & keeps Travis log verbosity to a minimum.
+    # --------------------------------------------------------------------------
+
+    - { cask_app_name: "vlc", tags: ["vlc","stage_5"], role: danbohea.cask-app }
+    - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_5"], role: danbohea.cask-app }
 
     # Last
     # --------------------------------------------------------------------------
 
-    # - { role: danbohea.dock-items, tags: ["dock_items","last","always"] }
+    # TODO
 
   post_tasks:
+
+    - osx_say:
+        msg: "This playbook is done diddly done."
+        voice: Fred
+      tags: no_ci
 
     - debug:
         msg: "Some changes may not take effect until you've restarted your Mac."
