--- a/mac.yml
+++ b/mac.yml
@@ -19,28 +19,45 @@
     # --------------------------------------------------------------------------
 
     - { role: ssh, tags: ["ssh","prep"] }
+    - { cask_app_name: "google-chrome", tags: ["google_chrome","prep"], role: danbohea.cask-app }
+    - { cask_app_name: "dropbox", tags: ["dropbox","prep"], role: danbohea.cask-app }
+    # - { cask_app_name: "google-backup-and-sync", tags: ["google_backup_and_sync","prep"], role: danbohea.cask-app }
     - { role: atom, tags: ["atom","prep"] }
     - { role: quick_look_plugins, tags: ["quick_look_plugins","prep"] }
 
     # Stage 1: Essential day-to-day
     # --------------------------------------------------------------------------
 
+    - { cask_app_name: "1password", tags: ["1password","stage_1"], role: danbohea.cask-app }
     - { cask_app_name: "the-unarchiver", tags: ["the_unarchiver","stage_1"], role: danbohea.cask-app }
+    # - { cask_app_name: "keka", tags: ["keka","stage_1"], role: danbohea.cask-app }
+    - { cask_app_name: "skype", tags: ["skype","stage_1"], role: danbohea.cask-app }
 
     # Stage 2: Essential dev
     # --------------------------------------------------------------------------
 
     - { cask_app_name: "parallels-desktop", tags: ["parallels_desktop","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "vmware-fusion", tags: ["vmware_fusion","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "virtualbox", tags: ["virtualbox","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "virtualbox-extension-pack", tags: ["virtualbox","stage_2"], role: danbohea.cask-app }
     - { role: vagrant, tags: ["vagrant","stage_2","sudo"] }
     - { role: git, tags: ["git","stage_2"] }
     - { role: node_pkgs, tags: ["node_pkgs","stage_2"] }
     - { brew_pkg_name: "python", tags: ["python","stage_2"], role: brew_pkg }
     - { brew_pkg_name: "yarn", tags: ["yarn","stage_2"], role: brew_pkg }
+    - { cask_app_name: "dash", tags: ["dash","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "araxis-merge", tags: ["araxis_merge","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "p4merge", tags: ["p4merge","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "kaleidoscope", tags: ["kaleidoscope","stage_2"], role: danbohea.cask-app }
     - { role: tower, tags: ["tower","stage_2"] }
     - { cask_app_name: "sequel-pro", tags: ["sequel_pro","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "postico", tags: ["postico","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "intellij-idea", tags: ["intellij_idea","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "docker", tags: ["docker","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "kitematic", tags: ["kitematic","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "launchrocket", tags: ["launchrocket","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "knuff", tags: ["knuff","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "ngrok", tags: ["ngrok","stage_2"], role: danbohea.cask-app }
 
     # Stage 3: Projects
     # --------------------------------------------------------------------------
@@ -52,12 +69,14 @@
 
     - { role: transmission, tags: ["transmission","stage_4"] }
     - { cask_app_name: "opera", tags: ["opera","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "riot", tags: ["riot","stage_4"], role: danbohea.cask-app }
 
     # Stage 5: No-frills cask installed apps that CI can skip.
     # This makes for faster tests & keeps Travis log verbosity to a minimum.
     # --------------------------------------------------------------------------
 
     - { cask_app_name: "vlc", tags: ["vlc","stage_5"], role: danbohea.cask-app }
+    - { cask_app_name: "iina", tags: ["iina","stage_5"], role: danbohea.cask-app }
     - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_5"], role: danbohea.cask-app }
 
     # Last
