--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -9,3 +9,4 @@
   with_items: "{{ vscode_packages }}"
   register: vscode_result
   changed_when: "'already installed' not in vscode_result.stdout"
+  tags: no_ci
