--- a/mac.yml
+++ b/mac.yml
@@ -18,135 +18,158 @@
     # Prep
     # --------------------------------------------------------------------------
 
+    - { role: zsh, tags: ["zsh","prep"] }
     - { role: ssh, tags: ["ssh","prep"] }
+    - { role: quick_look_plugins, tags: ["quick_look_plugins","prep"] }
+    - { brew_pkg_name: "unrar", tags: ["unrar","prep"], role: brew_pkg }
+    - { cask_app_name: "launchrocket", tags: ["launchrocket","prep"], role: danbohea.cask-app }
     - { cask_app_name: "google-chrome", tags: ["google_chrome","prep"], role: danbohea.cask-app }
+    # Upgrade common libs
+    - { brew_pkg_name: "openssl", tags: ["openssl","prep"], role: brew_pkg }
+    - { role: curl, tags: ["curl","prep"] }
+    # File Sync
     - { cask_app_name: "dropbox", tags: ["dropbox","prep"], role: danbohea.cask-app }
     # - { cask_app_name: "google-backup-and-sync", tags: ["google_backup_and_sync","prep"], role: danbohea.cask-app }
-    - { role: quick_look_plugins, tags: ["quick_look_plugins","prep"] }
 
     # Stage 1: Essential day-to-day
     # --------------------------------------------------------------------------
-
+    - { cask_app_name: "1password", tags: ["1password","stage_1"], role: danbohea.cask-app }
+    # - { mas_app_name: "1Password", mas_app_id: "443987910", tags: ["1Password","stage_1"], role: mas_app }
+    - { cask_app_name: "the-unarchiver", tags: ["the_unarchiver","stage_1"], role: danbohea.cask-app }
+    # - { cask_app_name: "keka", tags: ["keka","stage_1"], role: danbohea.cask-app }
     - { mas_app_name: "Pages", mas_app_id: "409201541", tags: ["pages","stage_1"], role: mas_app }
     - { mas_app_name: "Numbers", mas_app_id: "409203825", tags: ["numbers","stage_1"], role: mas_app }
     - { mas_app_name: "Keynote", mas_app_id: "409183694", tags: ["keynote","stage_1"], role: mas_app }
     - { mas_app_name: "Spark Mail", mas_app_id: "1176895641", tags: ["spark_mail","stage_1"], role: mas_app }
-    - { mas_app_name: "Slack", mas_app_id: "803453959", tags: ["slack","stage_1"], role: mas_app }
-    # - { mas_app_name: "Reeder 3", mas_app_id: "880001334", tags: ["reeder","stage_1"], role: mas_app }
     - { mas_app_name: "Magnet", mas_app_id: "441258766", tags: ["magnet","stage_1"], role: mas_app }
-    # - { mas_app_name: "1Password", mas_app_id: "443987910", tags: ["1Password","stage_1"], role: mas_app }
-    - { cask_app_name: "1password", tags: ["1password","stage_1"], role: danbohea.cask-app }
-    - { cask_app_name: "the-unarchiver", tags: ["the_unarchiver","stage_1"], role: danbohea.cask-app }
-    # - { cask_app_name: "keka", tags: ["keka","stage_1"], role: danbohea.cask-app }
     - { cask_app_name: "skype", tags: ["skype","stage_1"], role: danbohea.cask-app }
-    # - { cask_app_name: "spectacle", tags: ["spectacle","stage_1"], role: danbohea.cask-app }
+    # - { mas_app_name: "Reeder 3", mas_app_id: "880001334", tags: ["reeder","stage_1"], role: mas_app }
     - { mas_app_name: "Owly - Display Sleep Prevention", mas_app_id: "882812218", tags: ["owly","stage_1"], role: mas_app }
-    # - { cask_app_name: "caffeine", tags: ["caffeine","stage_1","sudo"], role: danbohea.cask-app }
 
     # Stage 2: Essential dev
     # --------------------------------------------------------------------------
 
     - { role: xcode, tags: ["xcode","stage_2"] }
-    - { role: zsh, tags: ["zsh","stage_2"] }
+
+    # Git & Diff Tools
     - { role: git, tags: ["git","stage_2"] }
+    - { role: tower, tags: ["tower","stage_2"] }
+    # - { cask_app_name: "github-desktop", tags: ["github_desktop","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "kaleidoscope", tags: ["kaleidoscope","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "araxis-merge", tags: ["araxis_merge","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "p4merge", tags: ["p4merge","stage_2"], role: danbohea.cask-app }
 
     # Editors
     - { role: atom, tags: ["atom","stage_2"] }
     - { role: vscode, tags: ["vscode","stage_2"] }
+
     # Virtualization
     - { cask_app_name: "docker", tags: ["docker","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "kitematic", tags: ["kitematic","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "parallels-desktop", tags: ["parallels_desktop","stage_2"], role: danbohea.cask-app }
     # - { cask_app_name: "vmware-fusion", tags: ["vmware_fusion","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "virtualbox", tags: ["virtualbox","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "virtualbox-extension-pack", tags: ["virtualbox","stage_2"], role: danbohea.cask-app }
-    - { role: vagrant, tags: ["vagrant","stage_2","sudo"] }
+    # - { cask_app_name: "virtualbox", tags: ["virtualbox","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "virtualbox-extension-pack", tags: ["virtualbox","stage_2"], role: danbohea.cask-app }
+    # - { role: vagrant, tags: ["vagrant","stage_2","sudo"] }
 
-    - { brew_pkg_name: "cmysql", brew_install_options: "cmysql", tags: ["cmysql","stage_2"], role: brew_pkg }
-
-    - { role: curl, tags: ["curl","stage_2"] }
-
-    - { brew_pkg_name: "go", tags: ["go","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "gitlab-ci-multi-runner", brew_install_options: "without-docker", tags: ["gitlab_ci_multi_runner","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "heroku", tags: ["heroku","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "mysql", tags: ["mysql","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "openshift-cli", tags: ["openshift_cli","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "postgresql", tags: ["postgresql","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "sl", tags: ["sl","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "sourcekitten", tags: ["sourcekitten","stage_2"], role: brew_pkg }
+    # DB
     - { brew_pkg_name: "sqlite", tags: ["sqlite","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "ssh-copy-id", tags: ["ssh-copy-id","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "openssl", tags: ["openssl","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "unrar", tags: ["unrar","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "vapor", tags: ["vapor","stage_2"], role: brew_pkg }
-    - { brew_pkg_name: "watchman", tags: ["watchman","stage_2"], role: brew_pkg }
-
-
-
-
-
-    - { cask_app_name: "github-desktop", tags: ["github_desktop","stage_2"], role: danbohea.cask-app }
-    - { role: node_pkgs, tags: ["node_pkgs","stage_2"] }
-    - { brew_pkg_name: "python", tags: ["python","stage_2"], role: brew_pkg }
-    - { cask_app_name: "dash", tags: ["dash","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "araxis-merge", tags: ["araxis_merge","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "p4merge", tags: ["p4merge","stage_2"], role: danbohea.cask-app }
-    # - { cask_app_name: "kaleidoscope", tags: ["kaleidoscope","stage_2"], role: danbohea.cask-app }
-    - { role: tower, tags: ["tower","stage_2"] }
+    - { brew_pkg_name: "mysql", tags: ["mysql","stage_2"], role: brew_pkg }
+    - { brew_pkg_name: "postgresql", tags: ["postgresql","stage_2"], role: brew_pkg }
+    
+    # DB GUI Clients
     - { cask_app_name: "sequel-pro", tags: ["sequel_pro","stage_2"], role: danbohea.cask-app }
-    # - { mas_app_name: "Postico", mas_app_id: "1031280567", tags: ["postico","stage_2"], role: mas_app }
     - { cask_app_name: "postico", tags: ["postico","stage_2"], role: danbohea.cask-app }
-    # - { cask_app_name: "transmit", tags: ["transmit","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "imageoptim", tags: ["imageoptim","stage_2"], role: danbohea.cask-app }
-    - { role: sketch, tags: ["sketch","stage_2"] }
-    - { mas_app_name: "Navicat Data Modeler Essentials", mas_app_id: "532423082", tags: ["navicat_modeler_essential","stage_2"], role: mas_app }
-    # - { mas_app_name: "xScope 4", mas_app_id: "889428659", tags: ["xscope","stage_2"], role: mas_app }
-    - { cask_app_name: "xscope", tags: ["xscope","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "intellij-idea", tags: ["intellij_idea","stage_2"], role: danbohea.cask-app }
-    # - { cask_app_name: "toggldesktop", tags: ["toggldesktop","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "launchrocket", tags: ["launchrocket","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "knuff", tags: ["knuff","stage_2"], role: danbohea.cask-app }
-    - { cask_app_name: "ngrok", tags: ["ngrok","stage_2"], role: danbohea.cask-app }
+    # - { mas_app_name: "Postico", mas_app_id: "1031280567", tags: ["postico","stage_2"], role: mas_app }
+    - { cask_app_name: "pgadmin4", tags: ["pgadmin","stage_2"], role: danbohea.cask-app }
+        
+    # REST Tools
     - { cask_app_name: "paw", tags: ["paw","stage_2"], role: danbohea.cask-app }
     # - { cask_app_name: "insomnia", tags: ["insomnia","stage_2"], role: danbohea.cask-app }
+
+    # Node Packages
+    - { role: node_pkgs, tags: ["node_pkgs","stage_2"] }
+
+    # Dev Languages
+    - { brew_pkg_name: "go", tags: ["go","stage_2"], role: brew_pkg }
+    # - { brew_pkg_name: "python", tags: ["python","stage_2"], role: brew_pkg }
+
+    # Swift + Vapor related 
+    - { role: vapor, tags: ["vapor","stage_2"] }
+    - { role: swiftlint, tags: ["swiftlint","stage_2"] }
+
+    # Others
+    - { brew_pkg_name: "gitlab-ci-multi-runner", brew_install_options: "without-docker", tags: ["gitlab_ci_multi_runner","stage_2"], role: brew_pkg }
+    - { brew_pkg_name: "heroku", tags: ["heroku","stage_2"], role: brew_pkg }
+    - { brew_pkg_name: "openshift-cli", tags: ["openshift_cli","stage_2"], role: brew_pkg }
+    - { brew_pkg_name: "watchman", tags: ["watchman","stage_2"], role: brew_pkg }
+    
 
     # Stage 3: Projects
     # --------------------------------------------------------------------------
     - { role: projects, tags: ["projects","stage_3"] }
 
-    # TODO
-
     # Stage 4: Remaining apps
     # --------------------------------------------------------------------------
 
+    # P2P
     - { role: transmission, tags: ["transmission","stage_4"] }
-    - { brew_pkg_name: "tree", tags: ["tree","stage_4"], role: brew_pkg }
-    # - { cask_app_name: "firefox", tags: ["firefox","stage_4"], role: danbohea.cask-app }
+
+    # Browsers
     - { cask_app_name: "opera", tags: ["opera","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "firefox", tags: ["firefox","stage_4"], role: danbohea.cask-app }
+
+    # Docker Tools
+    - { brew_pkg_name: "docker-clean", tags: ["docker_clean","stage_4"], role: brew_pkg }
+    - { cask_app_name: "kitematic", tags: ["kitematic","stage_4"], role: danbohea.cask-app }
+
+    # DB Tools
+    - { mas_app_name: "Navicat Data Modeler Essentials", mas_app_id: "532423082", tags: ["navicat_modeler_essential","stage_4"], role: mas_app }
+
+    # IM
+    - { mas_app_name: "Slack", mas_app_id: "803453959", tags: ["slack","stage_4"], role: mas_app }
     - { cask_app_name: "riot", tags: ["riot","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "adobe-creative-cloud", tags: ["adobe_creative_cloud","stage_4"], role: danbohea.cask-app }
-    # - { mas_app_name: "Microsoft OneNote", mas_app_id: "784801555", tags: ["one_note","4"], role: mas_app }
+
+    # Multimedia
+    - { cask_app_name: "vlc", tags: ["vlc","stage_5"], role: danbohea.cask-app }
+    - { cask_app_name: "iina", tags: ["iina","stage_5"], role: danbohea.cask-app }
+  
+    # IDEs
+    # - { cask_app_name: "intellij-idea", tags: ["intellij_idea","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "phpstorm", tags: ["phpstorm","stage_4"], role: danbohea.cask-app }
+
+    # Photo & Design Apps
     # - { mas_app_name: "Affinity Designer", mas_app_id: "824171161", tags: ["affinity_designer","stage_4"], role: mas_app }
     # - { mas_app_name: "Affinity Photo", mas_app_id: "824183456", tags: ["affinity_photo","stage_4"], role: mas_app }
-
+    # - { cask_app_name: "adobe-creative-cloud", tags: ["adobe_creative_cloud","stage_4"], role: danbohea.cask-app }
+    - { role: sketch, tags: ["sketch","stage_4"] }
+    # - { mas_app_name: "xScope 4", mas_app_id: "889428659", tags: ["xscope","stage_4"], role: mas_app }
+    - { cask_app_name: "xscope", tags: ["xscope","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "imageoptim", tags: ["imageoptim","stage_4"], role: danbohea.cask-app }
+   
+    # System Utilities
+    - { cask_app_name: "daisydisk", tags: ["daisydisk","stage_5"], role: danbohea.cask-app }
+    # - { mas_app_name: "DaisyDisk", mas_app_id: "411643860", tags: ["daisydisk","stage_5"], role: mas_app }
+    - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_5"], role: danbohea.cask-app }
+    - { cask_app_name: "cleanmymac", tags: ["cleanmymac","stage_5"], role: danbohea.cask-app }
+    - { cask_app_name: "bartender", role: danbohea.cask-app, tags: ["bartender","stage_5"] }
+  
+    # Other
+    - { cask_app_name: "dash", tags: ["dash","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "knuff", tags: ["knuff","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "ngrok", tags: ["ngrok","stage_4"], role: danbohea.cask-app }
+    - { brew_pkg_name: "ssh-copy-id", tags: ["ssh-copy-id","stage_4"], role: brew_pkg }
+    - { brew_pkg_name: "tree", tags: ["tree","stage_4"], role: brew_pkg }
+    # - { mas_app_name: "Microsoft OneNote", mas_app_id: "784801555", tags: ["one_note","4"], role: mas_app }
+    # - { cask_app_name: "hazel", tags: ["hazel","stage_5"], role: danbohea.cask-app }
+    - { cask_app_name: "cakebrew", tags: ["cakebrew","stage_4"], role: danbohea.cask-app }
+   
     # Stage 5: No-frills cask installed apps that CI can skip.
     # This makes for faster tests & keeps Travis log verbosity to a minimum.
     # --------------------------------------------------------------------------
 
-    # - { cask_app_name: "hazel", tags: ["hazel","stage_5"], role: danbohea.cask-app }
-    - { cask_app_name: "cakebrew", tags: ["cakebrew","stage_5"], role: danbohea.cask-app }
-    # - { mas_app_name: "DaisyDisk", mas_app_id: "411643860", tags: ["daisydisk","stage_5"], role: mas_app }
-    - { cask_app_name: "daisydisk", tags: ["daisydisk","stage_5"], role: danbohea.cask-app }
-    - { cask_app_name: "vlc", tags: ["vlc","stage_5"], role: danbohea.cask-app }
-    - { cask_app_name: "iina", tags: ["iina","stage_5"], role: danbohea.cask-app }
-    - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_5"], role: danbohea.cask-app }
-    - { cask_app_name: "cleanmymac", tags: ["cleanmymac","stage_5"], role: danbohea.cask-app }
-    - { cask_app_name: "bartender", role: danbohea.cask-app, tags: ["bartender","stage_5"] }
-
+   
     # Last
     # --------------------------------------------------------------------------
-
-    # TODO
 
   post_tasks:
 
