--- a/roles/mas_app/tasks/main.yml
+++ b/roles/mas_app/tasks/main.yml
@@ -5,11 +5,15 @@
   register: result
   changed_when: result.stdout.find('Installed') != -1
   when: app_store_email is defined and mas_password is defined and app_store_email != '' and mas_password != '' and mac_account is defined
-  tags: mas_app
+  tags:
+    - mas_app
+    - no_ci
 
 - name: Upgrade {{ mas_app_name }} - {{ mas_app_id }}.
   shell: mas list | grep "{{ mas_app_id }}" || mas upgrade "{{ mas_app_id }}"
   register: result
   changed_when: result.stdout.find('Installed') != -1
   when: app_store_email is defined and mas_password is defined and mas_email != '' and mas_password != '' and mac_account is defined
-  tags: mas_app
+  tags:
+    - mas_app
+    - no_ci
